[project]
name = "projeto-databricks"
version = "0.1.0"
description = "Aqui implementarei um projeto de ML End-to-End usando Databricks"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "skops>=0.13.0",
    "threadpoolctl>=3.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
